[package]
name = "formualizer-workbook"
version = "0.5.8"
edition = "2024"
description = "Ergonomic workbook API over the Formualizer engine (sheets, loaders, staging, undo/redo)"
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["spreadsheet", "excel", "workbook", "xlsx", "undo-redo"]
categories = ["data-structures", "mathematics"]

[dependencies]
formualizer-parse = { workspace = true }
formualizer-common = { workspace = true }
formualizer-eval = { path = "../formualizer-eval", version = "0.5.8", default-features = false }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
csv = { version = "1.3.1", optional = true }
parking_lot = "0.12"
chrono = { workspace = true }
once_cell = { workspace = true }
rustc-hash = { workspace = true }
zip = { version = "7.2", default-features = false, features = ["deflate"], optional = true }
quick-xml = { version = "0.39", features = ["encoding"], optional = true }

[features]
# system-clock: forwards eval's ambient-time feature (Local::now/Utc::now).
# Enabled by default for native + wasm-js consumers. Disable for portable wasm guests.
default = ["json", "csv", "system-clock"]
system-clock = ["formualizer-eval/system-clock"]
# js-runtime: forwards eval's browser/wasm-bindgen runtime feature.
# Activates web-time + JS getrandom. NOT enabled by default.
js-runtime = ["formualizer-eval/js-runtime"]
json = ["dep:serde_json", "formualizer-common/serde"]
csv = ["dep:csv"]
calamine = ["dep:calamine", "dep:zip", "dep:quick-xml"]
umya = ["dep:umya-spreadsheet", "dep:zip"]
mmap = ["dep:memmap2"]
io_builtins = []
import_range = ["io_builtins"]
webservice = ["io_builtins", "dep:reqwest"]
tracing = ["dep:tracing"]
perf_instrumentation = ["formualizer-eval/perf_instrumentation"]
compression = ["dep:zstd"]
calamine_integration = ["calamine"]
umya_integration = ["umya"]
wasm_plugins = ["dep:wasmparser", "dep:serde_json", "formualizer-common/serde"]
wasm_runtime_wasmtime = ["wasm_plugins", "dep:wasmtime"]

[dependencies.calamine]
version = "0.35"
optional = true

[dependencies.memmap2]
version = "0.9"
optional = true

[dependencies.reqwest]
version = "0.11"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.zstd]
version = "0.13"
optional = true

[dependencies.wasmparser]
version = "0.240"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wasmtime]
version = "43.0.2"
optional = true

[dev-dependencies]
wasm-encoder = "0.240"
formualizer-testkit = { path = "../formualizer-testkit" }
tempfile = { workspace = true }
umya-spreadsheet = "=2.3.2"

[[test]]
name = "calamine"
path = "tests/calamine/mod.rs"
required-features = ["calamine"]

[[test]]
name = "umya"
path = "tests/umya/mod.rs"
required-features = ["umya"]

[dependencies.umya-spreadsheet]
version = "=2.3.2"
package = "umya-spreadsheet"
optional = true
