[package]
name = "formualizer"
version = "0.3.0"
edition = "2024"
description = "Formualizer product surface (roll-up): workbook + engine + SheetPort, feature-gated"
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["excel", "formula", "spreadsheet", "engine", "workbook"]
categories = ["data-structures"]

[features]
default = ["eval", "workbook", "sheetport"]
eval = ["dep:formualizer-eval"]
workbook = ["dep:formualizer-workbook"]
sheetport = ["workbook", "dep:sheetport-spec", "dep:formualizer-sheetport"]

[dependencies]
formualizer-eval = { path = "../formualizer-eval", version = "0.3.0", optional = true }
formualizer-workbook = { path = "../formualizer-workbook", version = "0.3.0", optional = true }
formualizer-sheetport = { path = "../formualizer-sheetport", version = "0.3.0", optional = true }
sheetport-spec = { path = "../sheetport-spec", version = "0.3.0", optional = true }
