[package]
name = "formualizer"
version = "0.4.1"
edition = "2024"
description = "Embeddable spreadsheet engine — parse, evaluate & mutate Excel workbooks from Rust"
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["spreadsheet", "excel", "formula", "arrow", "wasm"]
categories = ["data-structures", "mathematics", "parser-implementations"]

[features]
default = ["eval", "workbook", "sheetport", "parse", "common"]
common = ["dep:formualizer-common"]
parse = ["dep:formualizer-parse", "common"]
eval = ["dep:formualizer-eval"]
workbook = ["dep:formualizer-workbook"]
sheetport = ["workbook", "dep:sheetport-spec", "dep:formualizer-sheetport"]
calamine = ["workbook", "formualizer-workbook/calamine"]
json = ["workbook", "formualizer-workbook/json"]
umya = ["workbook", "formualizer-workbook/umya"]
tracing = ["eval", "workbook", "formualizer-eval/tracing", "formualizer-workbook/tracing"]
tracing_chrome = ["tracing", "formualizer-eval/tracing_chrome"]

[dependencies]
formualizer-common = { path = "../formualizer-common", version = "1.1.0", optional = true }
formualizer-parse = { path = "../formualizer-parse", version = "1.1.0", optional = true }
formualizer-eval = { path = "../formualizer-eval", version = "0.4.1", optional = true }
formualizer-workbook = { path = "../formualizer-workbook", version = "0.4.1", optional = true }
formualizer-sheetport = { path = "../formualizer-sheetport", version = "0.4.1", optional = true }
sheetport-spec = { path = "../sheetport-spec", version = "0.3.0", optional = true }
