[package]
name = "sheetport-spec"
version = "0.3.0"
edition = "2024"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fio-lint"
path = "src/bin/fio_lint.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
semver = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }
